--- a/package.xml
+++ b/package.xml
@@ -7,49 +7,21 @@
   <license>BSD</license>
   <author email="tonyzhao@stanford.edu">Tony Zhao</author>
 
-  <buildtool_depend>catkin</buildtool_depend>
+  <buildtool_depend>ament_cmake_python</buildtool_depend>
 
+  <build_depend>interbotix_ros_slate</build_depend>
   <build_depend>interbotix_xs_modules</build_depend>
   <build_depend>interbotix_xs_msgs</build_depend>
   <build_depend>interbotix_xsarm_control</build_depend>
+  <build_depend>realsense2_camera</build_depend>
   <build_depend>rosbag</build_depend>
   <build_depend>roscpp</build_depend>
   <build_depend>rviz</build_depend>
-  <build_depend>realsense2_camera</build_depend>
-  <build_depend>usb_cam</build_depend>
-  <build_depend>interbotix_ros_slate</build_depend>
   <build_depend>sensor_msgs</build_depend>
   <build_depend>std_msgs</build_depend>
   <build_depend>std_srvs</build_depend>
   <build_depend>tf2_ros</build_depend>
-
-  <build_export_depend>interbotix_xs_modules</build_export_depend>
-  <build_export_depend>interbotix_xs_msgs</build_export_depend>
-  <build_export_depend>interbotix_xsarm_control</build_export_depend>
-  <build_export_depend>rosbag</build_export_depend>
-  <build_export_depend>roscpp</build_export_depend>
-  <build_export_depend>rviz</build_export_depend>
-  <build_export_depend>realsense2_camera</build_export_depend>
-  <build_export_depend>usb_cam</build_export_depend>
-  <build_export_depend>interbotix_ros_slate</build_export_depend>
-  <build_export_depend>sensor_msgs</build_export_depend>
-  <build_export_depend>std_msgs</build_export_depend>
-  <build_export_depend>std_srvs</build_export_depend>
-  <build_export_depend>tf2_ros</build_export_depend>
-
-  <exec_depend>interbotix_xs_modules</exec_depend>
-  <exec_depend>interbotix_xs_msgs</exec_depend>
-  <exec_depend>interbotix_xsarm_control</exec_depend>
-  <exec_depend>rosbag</exec_depend>
-  <exec_depend>roscpp</exec_depend>
-  <exec_depend>rviz</exec_depend>
-  <exec_depend>realsense2_camera</exec_depend>
-  <exec_depend>usb_cam</exec_depend>
-  <exec_depend>interbotix_ros_slate</exec_depend>
-  <exec_depend>sensor_msgs</exec_depend>
-  <exec_depend>std_msgs</exec_depend>
-  <exec_depend>std_srvs</exec_depend>
-  <exec_depend>tf2_ros</exec_depend>
+  <build_depend>usb_cam</build_depend>
 
   <export>
   </export>
