--- a/config/rs_cam.yaml
+++ b/config/rs_cam.yaml
@@ -4,11 +4,13 @@
       rgb_camera.profile: '640,480,60'
       enable_depth: false
       enable_infra: false
+      enable_infra1: false
+      enable_infra2: false
 
 $(var cam_high_name):
   camera:
     ros__parameters:
-      serial_no: "128422271327"
+      serial_no: ""
       # usb_port_id: "/dev/CAM_HIGH"
 
 $(var cam_low_name):
@@ -20,11 +22,11 @@ $(var cam_low_name):
 $(var cam_right_wrist_name):
   camera:
     ros__parameters:
-      serial_no: "128422270115"
+      serial_no: ""
       # usb_port_id: "/dev/CAM_RIGHT_WRIST"
 
 $(var cam_left_wrist_name):
   camera:
     ros__parameters:
-      serial_no: "128422270461"
+      serial_no: ""
       # usb_port_id: "/dev/CAM_LEFT_WRIST"
