Set depth module parameters

--- a/config/rs_cam.yaml
+++ b/config/rs_cam.yaml
@@ -5,6 +5,9 @@
       rgb_camera:
         profile: '640,480,60'
         enable_auto_exposure: false
+      depth_module:
+        enable_auto_exposure: false
+        profile: '640,480,60'
       enable_depth: false
       enable_infra: false
       enable_infra1: false
