Code Works with Aloha Solo,Static

--- a/config/aloha_static.yaml
+++ b/config/aloha_static.yaml
@@ -1,17 +1,28 @@
 leader_arms:
-  - name: leader_solo
+  - name: leader_right
     model: aloha_wx250s
     modes: leader_modes_right.yaml
     motor_configs: aloha_wx250s.yaml
     motor_specs: leader_motor_specs_right.yaml
     transform: [-0.5, -0.25, 0.0, 0.0, 0.0, 0.0, 1.0]
+  - name: leader_left
+    model: aloha_wx250s
+    modes: leader_modes_left.yaml
+    motor_configs: aloha_wx250s.yaml
+    motor_specs: leader_motor_specs_left.yaml
+    transform: [-0.5, 0.25, 0.0, 0.0, 0.0, 0.0, 1.0]
 
 follower_arms:
-  - name: follower_solo
+  - name: follower_right
     model: aloha_vx300s
     modes: follower_modes_right.yaml
     motor_configs: aloha_vx300s.yaml
     transform: [0.5, -0.25, 0.0, 0.0, 0.0, 0.0, 1.0]
+  - name: follower_left
+    model: aloha_vx300s
+    modes: follower_modes_left.yaml
+    motor_configs: aloha_vx300s.yaml
+    transform: [0.5, 0.25, 0.0, 0.0, 0.0, 0.0, 1.0]
 
 
 cameras:
@@ -30,13 +41,16 @@ cameras:
 
   camera_instances:
     - name: camera_high_solo
-      topic: /camera_high/camera/image_raw
       serial_no: "130322274102"
 
     - name: camera_wrist_right
-      topic: /camera_wrist/camera/image_raw
       serial_no: "130322272300"
-      
+
+    - name: camera_wrist_left
+      serial_no: "218622272670"
+
+    - name: camera_high_static
+      serial_no: "128422271347"
 
 base: 
   enable: false
