--- a/config/rs_cam.yaml
+++ b/config/rs_cam.yaml
@@ -1,3 +1,4 @@
+
 /**:
   camera:
     ros__parameters:
@@ -16,7 +17,7 @@
 $(var cam_high_name):
   camera:
     ros__parameters:
-      serial_no: "128422271347"
+      serial_no: ""
 
 $(var cam_low_name):
   camera:
@@ -26,7 +27,7 @@ $(var cam_low_name):
 $(var cam_right_wrist_name):
   camera:
     ros__parameters:
-      serial_no: "130322272300"
+      serial_no: ""
 
 $(var cam_left_wrist_name):
   camera:
